# Open-Anatomy-Explorer-Backend

./: .gitignore  Cargo.toml  readme.md  rocket.toml
.github/workflows/: rust.yml
migrations/2021-01-04-110851_create_users/: up.sql
migrations/2021-01-04-141146_create_models/: up.sql
migrations/2021-01-04-141258_create_labels/: down.sql  up.sql
migrations/2021-01-04-141259_create_labelsets/: down.sql  up.sql
migrations/2021-01-05-120253_create_userlabelsets/: down.sql  up.sql
migrations/2021-01-05-132059_create_quizzes/: down.sql  up.sql
migrations/2021-01-05-132106_create_questions/: up.sql
migrations/2021-01-11-094750_create_userquizzes/: down.sql  up.sql
migrations/2021-03-02-100737_edit_models/: down.sql  up.sql
migrations/2021-03-10-110900_edit_models_add_group/: down.sql  up.sql
src/: authentication.rs  database.rs  labelpoint.rs  labels.rs  main.rs  models.rs  modelstorage.rs  quiz.rs  schema.rs  users.rs  util.rs
src/label/: database.rs  mod.rs  model.rs  routes.rs
src/quiz/: database.rs  mod.rs  model.rs  routes.rs
src/users/: labelsets.rs  mod.rs  quizzes.rs
