[package]
name = "inf319-backend"
version = "0.1.0"
authors = ["Stian Soltvedt <stian@soltvedt.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix = "0.10"
# actix-web = "3.2"
# actix-cors = "0.5"
# actix-files = "0.4"
# actix-rt = "1.1"
# listenfd = "0.3"
dotenv = "0.15"
# log = "0.4"
# env_logger = "0.8"
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "uuid"]