[package]
name = "inf319-backend"
version = "0.1.0"
authors = ["Stian Soltvedt <stian@soltvedt.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_cors = "0.5"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve", "uuid"]