[package]
name = "open-anatomy-explorer-backend"
version = "0.1.0"
authors = ["Stian Soltvedt <stian@soltvedt.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", features = ["tls"] }
rocket_cors = "0.5"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
sodiumoxide = "0.2"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve", "uuid", "diesel_sqlite_pool"]

# rocket_contrib needs libsqlite, we override it to add the bundled feature.
# Version = "*" means that it can be anything, which cargo resolves to match
# the version rocket_contrib depends on without conflicts.
[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]

# To bulk import diesel macros, we need to manually macro_import it.
# Version = "*" means that it can be anything, which cargo resolves to match
# the version rocket_contrib depends on without conflicts.
[dependencies.diesel]
version = "*"
